--- a/payrollsystemsti/payrollsystemsti.csproj
+++ b/payrollsystemsti/payrollsystemsti.csproj
@@ -742,6 +742,8 @@
     <None Include="Resources\search1.png" />
     <None Include="Resources\OT.png" />
     <None Include="Resources\ot management.png" />
+    <None Include="Resources\OT1.png" />
+    <None Include="Resources\overtime.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
