--- a/payrollsystemsti/packages.config
+++ b/payrollsystemsti/packages.config
@@ -1,8 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Betalgo.OpenAI" version="8.7.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Http" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="140.340.80" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
+  <package id="Syncfusion.Core.WinForms" version="27.1.58" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="27.1.58" targetFramework="net472" />
+  <package id="Syncfusion.SfInput.WinForms" version="27.1.58" targetFramework="net472" />
+  <package id="Syncfusion.Shared.Base" version="27.1.58" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
   <package id="System.IO.Ports" version="8.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Net.Http.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
